force-app/main/default/objects/Tax_Rate__c/Tax_Rate__c.object-meta.xml
<CustomObject>
    <description>Used to track tax rates</description>
    <label>Tax Rate</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tax Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>