force-app/main/default/objects/Tax_Rate__c/fields/Additional_Medicare_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Medicare_Tax_Rate__c</fullName>
    <description>Additional tax on top of regular Medicare tax, only on wages above the threshold</description>
    <label>Additional Medicare Tax Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>