force-app/main/default/objects/Tax_Rate__c/fields/Bracket_Max__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Max__c</fullName>
    <description>Maximum Salary for Tax Bracket</description>
    <label>Bracket Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>