force-app/main/default/objects/Tax_Rate__c/fields/Bracket_Min__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Min__c</fullName>
    <description>Minimum Salary for Tax Bracket</description>
    <label>Bracket Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>