force-app/main/default/objects/Tax_Rate__c/fields/Filing_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Filing_Tax_Year__c</fullName>
    <description>Filing Year for Taxes</description>
    <label>Filing Tax Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>