force-app/main/default/objects/Tax_Rate__c/fields/Medicare_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Threshold_Amount__c</fullName>
    <description>Enter Filing Year Additional Medicare Tax Threshold Amount</description>
    <label>Medicare Threshold Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>