force-app/main/default/objects/Tax_Rate__c/fields/Social_Security_Wage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Wage_Limit__c</fullName>
    <label>Social Security Wage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>