force-app/main/default/objects/Tax_Rate__c/fields/Tax_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Type__c</fullName>
    <description>Tax Rate for which deduction</description>
    <label>Tax Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>