force-app/main/default/objects/Tax_Rate__c/validationRules/Bracket_Min_Required_for_Federal_Tax.validationRule-meta.xml
<ValidationRule>
    <fullName>Bracket_Min_Required_for_Federal_Tax</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
  ISPICKVAL (Tax_Rate_Type__c, &apos;Federal&apos;),
  ISNULL ( Bracket_Min__c),
  FALSE
)</errorConditionFormula>
    <errorDisplayField>Bracket_Min__c</errorDisplayField>
    <errorMessage>Bracket Min is required for Federal Tax Rate type</errorMessage>
</ValidationRule>