force-app/main/default/objects/Tax_Rate__c/validationRules/Medicare_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Medicare_Required_Field</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
    ISPICKVAL (Tax_Rate_Type__c, &apos;Medicare&apos;),
    ISNULL (Additional_Medicare_Tax_Rate__c),
  FALSE
)</errorConditionFormula>
    <errorDisplayField>Additional_Medicare_Tax_Rate__c</errorDisplayField>
    <errorMessage>Additional Medicare tax rate and Threshold Amount is needed for this tax rate type</errorMessage>
</ValidationRule>