force-app/main/default/objects/Tax_Rate__c/validationRules/Medicare_Threshold_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Medicare_Threshold_Required_Field</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
    ISPICKVAL (Tax_Rate_Type__c, &apos;Medicare&apos;),
    ISNULL (Medicare_Threshold_Amount__c),
  FALSE
)</errorConditionFormula>
    <errorDisplayField>Medicare_Threshold_Amount__c</errorDisplayField>
    <errorMessage>Medicare Threshold Amount is needed for this tax rate type</errorMessage>
</ValidationRule>