force-app/main/default/objects/Tax_Rate__c/validationRules/Social_Security_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Social_Security_Required_Field</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
  ISPICKVAL (Tax_Rate_Type__c, &apos;Social Security&apos;),
  ISNULL ( Social_Security_Wage_Limit__c ),
  FALSE
)</errorConditionFormula>
    <errorDisplayField>Social_Security_Wage_Limit__c</errorDisplayField>
    <errorMessage>A Wage Limit is needed for this tax rate type</errorMessage>
</ValidationRule>