force-app/main/default/objects/Tax_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Filing_Tax_Year__c</columns>
    <columns>Tax_Rate_Type__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Bracket_Min__c</columns>
    <columns>Bracket_Max__c</columns>
    <columns>Additional_Medicare_Tax_Rate__c</columns>
    <columns>Medicare_Threshold_Amount__c</columns>
    <columns>Social_Security_Wage_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>